Sat Feb  5 03:34:59 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/fileutils/fileasserts.rb: add message arguments.

	* test/fileutils/fileasserts.rb (Test::Unit::Assertions#assert_block):
	  show the given message.

Sat Feb  5 02:09:39 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (lex_getline, parser_set_encode): set encoding of lines
	  in SCRIPT_LINES__ as source encoding.  [ruby-dev:43168]

Sat Feb  5 02:08:37 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (ruby_thread_data_type): add prefix.

Sat Feb  5 00:59:54 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* vm_core.h (GetThreadPtr): use TypedData_Get_Struct() instead
	  CoreDataFromValue() because we need type check. Otherwise,
	  type mismatch can cause segmentation fault crash.
	  [ruby-core:35086] [Ruby 1.9-Bug#4367]

	* vm.c (thread_data_type): remove static.

Fri Feb  4 19:14:27 2011  Tanaka Akira  <akr@fsij.org>

	* enc/trans/utf8_mac.trans: parenthesize macro arguments.

Fri Feb  4 12:11:51 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* string.c (str_utf8_nth): fixed a conditon of optimized lead
	  byte counting. [Bug #4366][ruby-dev:43170]

Fri Feb  4 01:50:13 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* string.c (count_utf8_lead_bytes_with_word): wrote function
	  comments.

Fri Feb  4 00:14:55 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/zlib/zlib.c (gzfile_reader_get_unused): no need to dup
	  before rb_str_resurrect.

Thu Feb  3 20:04:44 2011  Tanaka Akira  <akr@fsij.org>

	* ext/curses/curses.c (CHECK): unused macro removed.

Thu Feb  3 18:33:26 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/zlib/zlib.c (gzfile_reader_get_unused): use rb_str_resurrect
	  because gz->z.input is hidden string. [ruby-core:35057]

Thu Feb  3 16:34:10 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/shift_jis.c (code_to_mbc): cast as int from the subtraction of
	  pointers.

	* enc/utf_16le.c (utf16le_mbc_enc_len): use ptrdiff_t.
