@@ -1,4 +1,7 @@
-Sat Feb  5 03:34:59 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Sat Feb  5 03:37:47 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/fileutils.rb (FileUtils::LowMethods): make low level methods
+	  in NoWrite and DryRun to do nothing.  [ruby-dev:43129]
 
 	* test/fileutils/fileasserts.rb: add message arguments.
 
